--- a/public/html/dasboard.html
+++ b/public/html/dasboard.html
@@ -12,7 +12,7 @@
 		<div class="col-md-3 sidenav" >
 			<img id="profilepic" class="profile_pic" src="" alt="profilepic">
 			<form method="post" id="change_profile_pic" class="form-inline" enctype="multipart/form-data">
-			    <label style="margin-top: 20px;">Change Pic</label><br>
+			    <label style="margin-top: 20px;color: white;">Change Pic</label><br>
 			    <input style="width: 75px;height: 35px;background-color: #111;border-color: #111;margin-left: 2px;padding: 0px;border-radius: 15px;" type="file" class="form-control" name="profile_img" accept="image/*">
 			    <button type="submit" class="btn btn-default" style="width: 75px;height: 35px;background-color: #E5F1FB;border-color: #111;margin-left: 2px;padding: 0px;border-radius: 15px;">Upload</button>
 			</form>
@@ -26,7 +26,7 @@
 		</div>
 		<div class="col-md-9  jumbotron " style="padding-left: 23%; width: 100%; text-align: justify;">
 			<button onclick="logout()" type="button" style="float: right;" class="btn btn-primary">LogOut</button>
-			<span style="font-size: 50px;">Welocome</span>
+			<span style="font-size: 50px;">Welcome</span>
 			<span class="container" style="width: 20%">
 			  <div class="progress">
 			    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
@@ -105,13 +105,13 @@
 			<nav aria-label="Page navigation example">
 			  <ul class="pagination justify-content-center">
 			    <li class="page-item ">
-			      <a class="page-link" href="#" >Previous</a>
+			      <a id="previous_page" class="page-link" href="#" >Previous</a>
 			    </li>
-			    <li class="page-item"><a class="page-link" href="#">1</a></li>
-			    <li class="page-item"><a class="page-link" href="#">2</a></li>
-			    <li class="page-item"><a class="page-link" href="#">3</a></li>
-			    <li class="page-item">
-			      <a class="page-link" href="#">Next</a>
+			    <li class="page-item"><a id="no1" class="page-link" href="#"></a></li>
+			    <li class="page-item"><a id="no2" class="page-link" href="#"></a></li>
+			    <li class="page-item"><a id="no3" class="page-link" href="#"></a></li>
+			    <li class="page-item" id="next_page_li">
+			      <a id="next_page" class="page-link" href="#">Next</a>
 			    </li>
 			  </ul>
 			</nav>
@@ -156,6 +156,39 @@ $.ajax({
     });  
    });
 </script>
-
+<script type="text/javascript">
+$('#next_page').on('click',function(event){
+	console.log("Next link is clicked!");
+	var retrievedObject = localStorage.getItem('testObject');
+    var result_obj=(JSON.parse(retrievedObject));
+    console.log(result_obj);
+    var current_page=document.getElementById('no1').innerHTML;
+	if(result_obj.length>0)    {
+			document.getElementById('no1').innerHTML=Number(current_page)+1;
+			document.getElementById('no2').innerHTML=Number(current_page)+2;
+			document.getElementById('no3').innerHTML=Number(current_page)+3;
+			get_result(result_obj);
+	    }
+   });
+</script>
+<script type="text/javascript">
+$('#previous_page').on('click',function(event){
+	if(Number(document.getElementById('no3').innerHTML)>3)
+	{
+		console.log("previous link is clicked!");
+		var retrievedObject = localStorage.getItem('testObject');
+	    var result_obj=(JSON.parse(retrievedObject));
+	    console.log(result_obj);
+	    var current_page=document.getElementById('no3').innerHTML;
+		if(result_obj.length>0 && current_page>3)    {
+				document.getElementById('no3').innerHTML=Number(current_page)-1;
+				document.getElementById('no2').innerHTML=Number(current_page)-2;
+				document.getElementById('no1').innerHTML=Number(current_page)-3;
+				// document.getElementsByTagName("next_page_li").removeAttribute("disabled");
+				get_result(result_obj);
+		    }
+	}
+   });
+</script>
 </body>
 </html>
